// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatsGrid > matches snapshot at viewport width 375 1`] = `
<DocumentFragment>
  <div
    style="width: 375px;"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="mb-8 grid grid-cols-1 gap-4 sm:grid-cols-2 xl:grid-cols-4"
      data-testid="dashboard-stats-live-region"
      role="status"
    >
      <p
        class="sr-only"
      >
        Dashboard metrics updated. 12 total users, 9 active users, 4 organizations, 4 enabled providers, 25 percent storage used, error rate 1.52 percent, queue depth 16. 7 active sessions, 167.0K tokens consumed.
      </p>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Total Users
          </h3>
          <svg
            class="lucide lucide-users h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            9 active
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Organizations
          </h3>
          <svg
            class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
            />
            <path
              d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
            />
            <path
              d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M10 6h4"
            />
            <path
              d="M10 10h4"
            />
            <path
              d="M10 14h4"
            />
            <path
              d="M10 18h4"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            4
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            7 teams
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            LLM Providers
          </h3>
          <svg
            class="lucide lucide-cpu h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="16"
              rx="2"
              width="16"
              x="4"
              y="4"
            />
            <rect
              height="6"
              rx="1"
              width="6"
              x="9"
              y="9"
            />
            <path
              d="M15 2v2"
            />
            <path
              d="M15 20v2"
            />
            <path
              d="M2 15h2"
            />
            <path
              d="M2 9h2"
            />
            <path
              d="M20 15h2"
            />
            <path
              d="M20 9h2"
            />
            <path
              d="M9 2v2"
            />
            <path
              d="M9 20v2"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            4
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            of 5 configured
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Storage
          </h3>
          <svg
            class="lucide lucide-hard-drive h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="22"
              x2="2"
              y1="12"
              y2="12"
            />
            <path
              d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
            />
            <line
              x1="6"
              x2="6.01"
              y1="16"
              y2="16"
            />
            <line
              x1="10"
              x2="10.01"
              y1="16"
              y2="16"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            2.0 GB
          </div>
          <div
            class="mt-2"
          >
            <div
              aria-label="Storage usage"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="25"
              class="h-2 w-full rounded-full bg-gray-200"
              role="progressbar"
            >
              <div
                class="h-2 rounded-full bg-green-500"
                style="width: 25%;"
              />
            </div>
            <p
              class="mt-1 text-xs text-muted-foreground"
            >
              25% used
            </p>
            <a
              class="mt-1 inline-block text-xs text-primary hover:underline"
              data-testid="storage-detail-link"
              href="/data-ops"
            >
              View details
            </a>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Active Sessions
          </h3>
          <svg
            class="lucide lucide-monitor h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              width="20"
              x="2"
              y="3"
            />
            <line
              x1="8"
              x2="16"
              y1="21"
              y2="21"
            />
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="21"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            7
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            ACP agent sessions
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Token Consumption
          </h3>
          <svg
            class="lucide lucide-coins h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="6"
            />
            <path
              d="M18.09 10.37A6 6 0 1 1 10.34 18"
            />
            <path
              d="M7 6h1v4"
            />
            <path
              d="m16.71 13.88.7.71-2.82 2.82"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            167.0K
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            125.0K prompt / 42.0K completion
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Request Latency (p95)
          </h3>
          <svg
            class="lucide lucide-clock3 h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16.5 12"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            320 ms
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            7.2% down vs previous day
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Error Rate
          </h3>
          <svg
            class="lucide lucide-circle-x h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            1.52%
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            24.0% down vs previous day
          </p>
          <a
            class="inline-block text-xs text-primary hover:underline"
            data-testid="error-drilldown-link"
            href="/audit?action=error"
          >
            View errors
          </a>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Daily LLM Cost
          </h3>
          <svg
            class="lucide lucide-wallet h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            $18.23
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-amber-600"
          >
            <svg
              class="lucide lucide-arrow-up-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 7h10v10"
              />
              <path
                d="M7 17 17 7"
              />
            </svg>
            13.0% up vs previous day
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Jobs & Queue
          </h3>
          <svg
            class="lucide lucide-workflow h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="8"
              rx="2"
              width="8"
              x="3"
              y="3"
            />
            <path
              d="M7 11v4a2 2 0 0 0 2 2h4"
            />
            <rect
              height="8"
              rx="2"
              width="8"
              x="13"
              y="13"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            5 / 13 / 3
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            active / queued / failed
          </p>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            20.0% down vs last refresh
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Cache Hit Rate
          </h3>
          <svg
            class="lucide lucide-database h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <ellipse
              cx="12"
              cy="5"
              rx="9"
              ry="3"
            />
            <path
              d="M3 5V19A9 3 0 0 0 21 19V5"
            />
            <path
              d="M3 12A9 3 0 0 0 21 12"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            N/A
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            RAG cache hit rate
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            MCP Tool Invocations
          </h3>
          <svg
            class="lucide lucide-plug h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22v-5"
            />
            <path
              d="M9 8V2"
            />
            <path
              d="M15 8V2"
            />
            <path
              d="M18 8v5a4 4 0 0 1-4 4h-4a4 4 0 0 1-4-4V8Z"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
            title="Requires MCP telemetry"
          >
            N/A
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Requires MCP telemetry
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsGrid > matches snapshot at viewport width 768 1`] = `
<DocumentFragment>
  <div
    style="width: 768px;"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="mb-8 grid grid-cols-1 gap-4 sm:grid-cols-2 xl:grid-cols-4"
      data-testid="dashboard-stats-live-region"
      role="status"
    >
      <p
        class="sr-only"
      >
        Dashboard metrics updated. 12 total users, 9 active users, 4 organizations, 4 enabled providers, 25 percent storage used, error rate 1.52 percent, queue depth 16. 7 active sessions, 167.0K tokens consumed.
      </p>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Total Users
          </h3>
          <svg
            class="lucide lucide-users h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            9 active
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Organizations
          </h3>
          <svg
            class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
            />
            <path
              d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
            />
            <path
              d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M10 6h4"
            />
            <path
              d="M10 10h4"
            />
            <path
              d="M10 14h4"
            />
            <path
              d="M10 18h4"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            4
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            7 teams
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            LLM Providers
          </h3>
          <svg
            class="lucide lucide-cpu h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="16"
              rx="2"
              width="16"
              x="4"
              y="4"
            />
            <rect
              height="6"
              rx="1"
              width="6"
              x="9"
              y="9"
            />
            <path
              d="M15 2v2"
            />
            <path
              d="M15 20v2"
            />
            <path
              d="M2 15h2"
            />
            <path
              d="M2 9h2"
            />
            <path
              d="M20 15h2"
            />
            <path
              d="M20 9h2"
            />
            <path
              d="M9 2v2"
            />
            <path
              d="M9 20v2"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            4
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            of 5 configured
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Storage
          </h3>
          <svg
            class="lucide lucide-hard-drive h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="22"
              x2="2"
              y1="12"
              y2="12"
            />
            <path
              d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
            />
            <line
              x1="6"
              x2="6.01"
              y1="16"
              y2="16"
            />
            <line
              x1="10"
              x2="10.01"
              y1="16"
              y2="16"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            2.0 GB
          </div>
          <div
            class="mt-2"
          >
            <div
              aria-label="Storage usage"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="25"
              class="h-2 w-full rounded-full bg-gray-200"
              role="progressbar"
            >
              <div
                class="h-2 rounded-full bg-green-500"
                style="width: 25%;"
              />
            </div>
            <p
              class="mt-1 text-xs text-muted-foreground"
            >
              25% used
            </p>
            <a
              class="mt-1 inline-block text-xs text-primary hover:underline"
              data-testid="storage-detail-link"
              href="/data-ops"
            >
              View details
            </a>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Active Sessions
          </h3>
          <svg
            class="lucide lucide-monitor h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              width="20"
              x="2"
              y="3"
            />
            <line
              x1="8"
              x2="16"
              y1="21"
              y2="21"
            />
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="21"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            7
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            ACP agent sessions
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Token Consumption
          </h3>
          <svg
            class="lucide lucide-coins h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="6"
            />
            <path
              d="M18.09 10.37A6 6 0 1 1 10.34 18"
            />
            <path
              d="M7 6h1v4"
            />
            <path
              d="m16.71 13.88.7.71-2.82 2.82"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            167.0K
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            125.0K prompt / 42.0K completion
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Request Latency (p95)
          </h3>
          <svg
            class="lucide lucide-clock3 h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16.5 12"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            320 ms
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            7.2% down vs previous day
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Error Rate
          </h3>
          <svg
            class="lucide lucide-circle-x h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            1.52%
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            24.0% down vs previous day
          </p>
          <a
            class="inline-block text-xs text-primary hover:underline"
            data-testid="error-drilldown-link"
            href="/audit?action=error"
          >
            View errors
          </a>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Daily LLM Cost
          </h3>
          <svg
            class="lucide lucide-wallet h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            $18.23
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-amber-600"
          >
            <svg
              class="lucide lucide-arrow-up-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 7h10v10"
              />
              <path
                d="M7 17 17 7"
              />
            </svg>
            13.0% up vs previous day
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Jobs & Queue
          </h3>
          <svg
            class="lucide lucide-workflow h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="8"
              rx="2"
              width="8"
              x="3"
              y="3"
            />
            <path
              d="M7 11v4a2 2 0 0 0 2 2h4"
            />
            <rect
              height="8"
              rx="2"
              width="8"
              x="13"
              y="13"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            5 / 13 / 3
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            active / queued / failed
          </p>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            20.0% down vs last refresh
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Cache Hit Rate
          </h3>
          <svg
            class="lucide lucide-database h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <ellipse
              cx="12"
              cy="5"
              rx="9"
              ry="3"
            />
            <path
              d="M3 5V19A9 3 0 0 0 21 19V5"
            />
            <path
              d="M3 12A9 3 0 0 0 21 12"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            N/A
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            RAG cache hit rate
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            MCP Tool Invocations
          </h3>
          <svg
            class="lucide lucide-plug h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22v-5"
            />
            <path
              d="M9 8V2"
            />
            <path
              d="M15 8V2"
            />
            <path
              d="M18 8v5a4 4 0 0 1-4 4h-4a4 4 0 0 1-4-4V8Z"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
            title="Requires MCP telemetry"
          >
            N/A
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Requires MCP telemetry
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsGrid > matches snapshot at viewport width 1280 1`] = `
<DocumentFragment>
  <div
    style="width: 1280px;"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      class="mb-8 grid grid-cols-1 gap-4 sm:grid-cols-2 xl:grid-cols-4"
      data-testid="dashboard-stats-live-region"
      role="status"
    >
      <p
        class="sr-only"
      >
        Dashboard metrics updated. 12 total users, 9 active users, 4 organizations, 4 enabled providers, 25 percent storage used, error rate 1.52 percent, queue depth 16. 7 active sessions, 167.0K tokens consumed.
      </p>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Total Users
          </h3>
          <svg
            class="lucide lucide-users h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            9 active
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Organizations
          </h3>
          <svg
            class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
            />
            <path
              d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
            />
            <path
              d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M10 6h4"
            />
            <path
              d="M10 10h4"
            />
            <path
              d="M10 14h4"
            />
            <path
              d="M10 18h4"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            4
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            7 teams
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            LLM Providers
          </h3>
          <svg
            class="lucide lucide-cpu h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="16"
              rx="2"
              width="16"
              x="4"
              y="4"
            />
            <rect
              height="6"
              rx="1"
              width="6"
              x="9"
              y="9"
            />
            <path
              d="M15 2v2"
            />
            <path
              d="M15 20v2"
            />
            <path
              d="M2 15h2"
            />
            <path
              d="M2 9h2"
            />
            <path
              d="M20 15h2"
            />
            <path
              d="M20 9h2"
            />
            <path
              d="M9 2v2"
            />
            <path
              d="M9 20v2"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            4
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            of 5 configured
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Storage
          </h3>
          <svg
            class="lucide lucide-hard-drive h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="22"
              x2="2"
              y1="12"
              y2="12"
            />
            <path
              d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
            />
            <line
              x1="6"
              x2="6.01"
              y1="16"
              y2="16"
            />
            <line
              x1="10"
              x2="10.01"
              y1="16"
              y2="16"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            2.0 GB
          </div>
          <div
            class="mt-2"
          >
            <div
              aria-label="Storage usage"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="25"
              class="h-2 w-full rounded-full bg-gray-200"
              role="progressbar"
            >
              <div
                class="h-2 rounded-full bg-green-500"
                style="width: 25%;"
              />
            </div>
            <p
              class="mt-1 text-xs text-muted-foreground"
            >
              25% used
            </p>
            <a
              class="mt-1 inline-block text-xs text-primary hover:underline"
              data-testid="storage-detail-link"
              href="/data-ops"
            >
              View details
            </a>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Active Sessions
          </h3>
          <svg
            class="lucide lucide-monitor h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              width="20"
              x="2"
              y="3"
            />
            <line
              x1="8"
              x2="16"
              y1="21"
              y2="21"
            />
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="21"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            7
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            ACP agent sessions
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Token Consumption
          </h3>
          <svg
            class="lucide lucide-coins h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="6"
            />
            <path
              d="M18.09 10.37A6 6 0 1 1 10.34 18"
            />
            <path
              d="M7 6h1v4"
            />
            <path
              d="m16.71 13.88.7.71-2.82 2.82"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            167.0K
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            125.0K prompt / 42.0K completion
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Request Latency (p95)
          </h3>
          <svg
            class="lucide lucide-clock3 h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16.5 12"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            320 ms
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            7.2% down vs previous day
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Error Rate
          </h3>
          <svg
            class="lucide lucide-circle-x h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m15 9-6 6"
            />
            <path
              d="m9 9 6 6"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            1.52%
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            24.0% down vs previous day
          </p>
          <a
            class="inline-block text-xs text-primary hover:underline"
            data-testid="error-drilldown-link"
            href="/audit?action=error"
          >
            View errors
          </a>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Daily LLM Cost
          </h3>
          <svg
            class="lucide lucide-wallet h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            $18.23
          </div>
          <p
            class="inline-flex items-center gap-1 text-xs text-amber-600"
          >
            <svg
              class="lucide lucide-arrow-up-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 7h10v10"
              />
              <path
                d="M7 17 17 7"
              />
            </svg>
            13.0% up vs previous day
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Jobs & Queue
          </h3>
          <svg
            class="lucide lucide-workflow h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="8"
              rx="2"
              width="8"
              x="3"
              y="3"
            />
            <path
              d="M7 11v4a2 2 0 0 0 2 2h4"
            />
            <rect
              height="8"
              rx="2"
              width="8"
              x="13"
              y="13"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            5 / 13 / 3
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            active / queued / failed
          </p>
          <p
            class="inline-flex items-center gap-1 text-xs text-emerald-600"
          >
            <svg
              class="lucide lucide-arrow-down-right h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            20.0% down vs last refresh
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Cache Hit Rate
          </h3>
          <svg
            class="lucide lucide-database h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <ellipse
              cx="12"
              cy="5"
              rx="9"
              ry="3"
            />
            <path
              d="M3 5V19A9 3 0 0 0 21 19V5"
            />
            <path
              d="M3 12A9 3 0 0 0 21 12"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
          >
            N/A
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            RAG cache hit rate
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            MCP Tool Invocations
          </h3>
          <svg
            class="lucide lucide-plug h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22v-5"
            />
            <path
              d="M9 8V2"
            />
            <path
              d="M15 8V2"
            />
            <path
              d="M18 8v5a4 4 0 0 1-4 4h-4a4 4 0 0 1-4-4V8Z"
            />
          </svg>
        </div>
        <div
          class="p-6 pt-0 space-y-1"
        >
          <div
            class="text-2xl font-bold"
            title="Requires MCP telemetry"
          >
            N/A
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Requires MCP telemetry
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
